--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "Patrick O'Connor",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.21.0",
+    "cheerio": "^1.0.0-rc.3",
     "dotenv": "^8.2.0",
     "selenium-webdriver": "^4.0.0-alpha.7"
   }
